Fix indentation levels and names (convention)

--- a/src/domoticz/Makefile.am
+++ b/src/domoticz/Makefile.am
@@ -2,5 +2,5 @@ MAINTAINERCLEANFILES = Makefile.in
 
 AM_LDFLAGS = -lcurl
 
-bin_PROGRAMS = createSensor
-createSensor_SOURCES = createSensor.c
+bin_PROGRAMS = create_sensor
+create_sensor_SOURCES = create_sensor.c
