--- a/.config
+++ b/.config
@@ -392,7 +392,7 @@ BR2_ENABLE_LOCALE_PURGE=y
 BR2_ENABLE_LOCALE_WHITELIST="C en_US"
 # BR2_SYSTEM_ENABLE_NLS is not set
 # BR2_TARGET_TZ_INFO is not set
-BR2_ROOTFS_USERS_TABLES=""
+BR2_ROOTFS_USERS_TABLES="/root/users.tables"
 BR2_ROOTFS_OVERLAY=""
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi3/post-build.sh"
 BR2_ROOTFS_POST_FAKEROOT_SCRIPT=""
@@ -1044,14 +1044,11 @@ BR2_PACKAGE_LUAJIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LPEG is not set
 # BR2_PACKAGE_LPTY is not set
 # BR2_PACKAGE_LRANDOM is not set
-# BR2_PACKAGE_LSQLITE3 is not set
+BR2_PACKAGE_LSQLITE3=y
 # BR2_PACKAGE_LUA_BIT32 is not set
 # BR2_PACKAGE_LUA_CJSON is not set
 # BR2_PACKAGE_LUA_COAT is not set
-
-#
-# lua-coatpersistent needs lsqlite3 or luasql-sqlite3
-#
+# BR2_PACKAGE_LUA_COATPERSISTENT is not set
 # BR2_PACKAGE_LUA_CSNAPPY is not set
 # BR2_PACKAGE_LUA_EV is not set
 # BR2_PACKAGE_LUA_FLU is not set
@@ -1080,7 +1077,7 @@ BR2_PACKAGE_LUAJIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LUA_RESTY_HTTP is not set
 # BR2_PACKAGE_LUASEC is not set
 # BR2_PACKAGE_LUASOCKET is not set
-# BR2_PACKAGE_LUASQL_SQLITE3 is not set
+BR2_PACKAGE_LUASQL_SQLITE3=y
 
 #
 # lunit needs a Lua 5.1 interpreter
@@ -2321,7 +2318,7 @@ BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_GEN=4
 BR2_TARGET_ROOTFS_EXT2_REV=1
 BR2_TARGET_ROOTFS_EXT2_LABEL=""
-BR2_TARGET_ROOTFS_EXT2_SIZE="90M"
+BR2_TARGET_ROOTFS_EXT2_SIZE="100M"
 BR2_TARGET_ROOTFS_EXT2_INODES=0
 BR2_TARGET_ROOTFS_EXT2_RESBLKS=5
 BR2_TARGET_ROOTFS_EXT2_MKFS_OPTIONS="-O ^64bit"
