Add cpp example file

--- a/src/domoticz/Makefile.am
+++ b/src/domoticz/Makefile.am
@@ -2,5 +2,7 @@ MAINTAINERCLEANFILES = Makefile.in
 
 AM_LDFLAGS = -lcurl
 
-bin_PROGRAMS = create_sensor
+bin_PROGRAMS = create_sensor \
+	       hello
 create_sensor_SOURCES = create_sensor.c
+hello_SOURCES = hello.cpp
