--- a/src/domoticz/scripts/Makefile
+++ b/src/domoticz/scripts/Makefile
@@ -17,10 +17,12 @@ lib:
 	g++ -L. -lshared -o build/server GPIOserver.cpp
 
 crossv2:
+	mkdir -p build
 	$(CC) $(CFLAGS) GPIOClass.cpp GPIOon.cpp -o build/gpion
 	$(CC) $(CFLAGS) GPIOClass.cpp GPIOoff.cpp -o build/gpioff
 
 crossv4:
+	mkdir -p build
 	$(CC) $(CFLAGS) GPIOClass.cpp GPIOserver.cpp -o build/server
 	$(CC) $(CFLAGS) GPIOclient.cpp -o build/client
 
